2012-11-01  Florian Holeczek (florianh AT apache DOT org)

       * 2.9.0-incubating (preparing release)
       
       * added generation of .sha1 checksum files

2012-10-30  Florian Holeczek (florianh AT apache DOT org)

       * moved doc/aaa-diagram.graffle to project management area

2012-10-28  Florian Holeczek (florianh AT apache DOT org)

       * 2.9.0-incubating-14

       * JSPWIKI-750: PageViewPluginTest is failing very often when using a JDK 7
       
       * minor documentation and logging fixes to PageViewPlugin

2012-10-22  Florian Holeczek (florianh AT apache DOT org)

       * several small fixes and improvements related to building and licensing stuff

2012-10-22  Florian Holeczek (florianh AT apache DOT org)

       * 2.9.0-incubating-13
       
       * fixed CommentedPropertiesTest, which broke because of the recent license header changes

2012-10-22  Florian Holeczek (florianh AT apache DOT org)

       * adjusted Ant target "rat-report"

       * added license headers to further files

2012-10-21  Juan Pablo Santos (juanpablo AT apache DOT org)
       
       * ensure correct information on cobertura reports.
       
2012-10-21  Florian Holeczek (florianh AT apache DOT org)

       * some further fixes to license headers

       * build improvements: checksum files in correct format, added SHA-512 hash

2012-10-20  Florian Holeczek (florianh AT apache DOT org)

       * some fixes for JSPWIKI-749 and CheckStyle version 5.6

2012-10-09  Juan Pablo Santos (juanpablo AT apache DOT org)
       
       * added Apache License Header to files which were missing it 
         (cfr. with http://s.apache.org/EDd).

2012-10-08  Juan Pablo Santos (juanpablo AT apache DOT org)
       
       * Added rat-report task. It requires at least Apache Ant 1.7.1, though.
       
       * .java files now conform strictly to Apache License Header (cfr. with 
         http://s.apache.org/EDd).

2012-09-25  Florian Holeczek (florianh AT apache DOT org)
