@@ -1,3 +1,9 @@
+2012-17-01  Juan Pablo Santos (juanpablo AT apache DOT org)
+
+       * JSPWIKI-751: deleted guitests target
+       
+       * Upgraded Sonar Ant Tasks to 2.0
+
 2012-11-01  Florian Holeczek (florianh AT apache DOT org)
 
        * 2.9.0-incubating (preparing release)
